fix gap

--- a/styles/style.css
+++ b/styles/style.css
@@ -107,6 +107,7 @@ ol {
   object-position: center;
   inline-size: 711px;
   block-size: 386px;
+  display: block;
 }
 
 .result__video:focus {
@@ -134,6 +135,7 @@ ol {
   font-weight: 400;
   font-size: 18px;
   line-height: 1.2;
+  font-family: "Fira Sans Condensed", sans-serif;
 }
 
 .search-form__label {
@@ -283,7 +285,7 @@ ol {
 .content__details {
   display: flex;
   flex-direction: column;
-  gap: 26px;
+  gap: 23px;
   inline-size: 100%;
 }
 
